--- a/pixels-canvas/Cargo.toml
+++ b/pixels-canvas/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "pixels-canvas"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 
 [dependencies]
 pixels-util = { path = "../pixels-util" }
 ureq = { version = "2.6.2", features = ["json"] }
+image = "0.24"
