--- a/pixels-interface/Cargo.toml
+++ b/pixels-interface/Cargo.toml
@@ -13,4 +13,4 @@ egui_extras = { version = "0.21.0", features = ["image"] }
 macroquad = "0.3.25"
 bevy_time = "0.9.1"
 bevy_ecs = "0.9.1"
-native-dialog = "0.6.3"
+rfd = "0.11.2"
