--- a/pixels-canvas/Cargo.toml
+++ b/pixels-canvas/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "pixels-canvas"
-version = "0.1.3"
+version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 pixels-util = { path = "../pixels-util" }
+
+paste = "1.0.12"
 ureq = { version = "2.6.2", features = ["json"] }
-image = "0.24"
