--- a/pixels-util/Cargo.toml
+++ b/pixels-util/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "pixels-util"
-version = "0.1.3"
+version = "0.1.0"
 edition = "2021"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
-chrono = "0.4.1"
+image = "0.24.5"
+paste = "1.0.12"
+chrono = "0.4.23"
